y.output
State 304 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' exp ')'

    5 constant: I_CONSTANT
    6         | F_CONSTANT
    7         | C_CONSTANT

    8 string: STRING_LITERAL
    9       | FUNC_NAME

   10 postfix_expression: primary_expression
   11                   | postfix_expression '[' exp ']'
   12                   | postfix_expression '(' ')'
   13                   | postfix_expression '(' argument_expression_list ')'
   14                   | postfix_expression '.' IDENTIFIER
   15                   | postfix_expression INC_OP
   16                   | postfix_expression DEC_OP
   17                   | '(' type_name ')' '{' initializer_list '}'
   18                   | '(' type_name ')' '{' initializer_list ',' '}'

   19 argument_expression_list: assignment_exp
   20                         | argument_expression_list ',' assignment_exp

   21 unary_expression: postfix_expression
   22                 | INC_OP unary_expression
   23                 | DEC_OP unary_expression
   24                 | unary_operator cast_expression

   25 unary_operator: '&'
   26               | '*'
   27               | '+'
   28               | '-'
   29               | '~'
   30               | '!'

   31 cast_expression: unary_expression
   32                | '(' type_name ')' cast_expression

   33 mulexp: cast_expression
   34       | mulexp '*' cast_expression
   35       | mulexp '/' cast_expression
   36       | mulexp '%' cast_expression

   37 addexp: mulexp
   38       | addexp '+' mulexp
   39       | addexp '-' mulexp

   40 shift_expression: addexp
   41                 | shift_expression LEFT_OP addexp
   42                 | shift_expression RIGHT_OP addexp

   43 rel_exp: shift_expression
   44        | rel_exp '<' shift_expression
   45        | rel_exp '>' shift_expression
   46        | rel_exp LE_OP shift_expression
   47        | rel_exp GE_OP shift_expression

   48 equals_ex: rel_exp
   49          | equals_ex EQ_OP rel_exp
   50          | equals_ex NE_OP rel_exp

   51 and_exp: equals_ex
   52        | and_exp '&' equals_ex

   53 xor_exp: and_exp
   54        | xor_exp '^' and_exp

   55 or_exp: xor_exp
   56       | or_exp '|' xor_exp

   57 and_operant: or_exp
   58            | and_operant AND_OP or_exp

   59 or_operant: and_operant
   60           | or_operant OR_OP and_operant

   61 condition_exp: or_operant
   62              | or_operant '?' exp ':' condition_exp

   63 assignment_exp: condition_exp
   64               | unary_expression assignment_operator assignment_exp

   65 assignment_operator: '='
   66                    | MUL_ASSIGN
   67                    | DIV_ASSIGN
   68                    | MOD_ASSIGN
   69                    | ADD_ASSIGN
   70                    | SUB_ASSIGN
   71                    | AND_ASSIGN
   72                    | XOR_ASSIGN
   73                    | OR_ASSIGN

   74 exp: assignment_exp
   75    | exp ',' assignment_exp

   76 constant_expression: condition_exp

   77 declaration: declaration_specifiers ';'
   78            | declaration_specifiers init_declarator_list ';'

   79 declaration_specifiers: storage_class_specifier declaration_specifiers
   80                       | storage_class_specifier
   81                       | type_specifier declaration_specifiers
   82                       | type_specifier
   83                       | type_qualifier declaration_specifiers
   84                       | type_qualifier

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list ',' init_declarator

   87 init_declarator: declarator '=' initializer
   88                | declarator

   89 storage_class_specifier: EXTERN
   90                        | STATIC

   91 type_specifier: VOID
   92               | CHAR
   93               | SHORT
   94               | INT
   95               | LONG
   96               | FLOAT
   97               | BOOL

   98 specifier_qualifier_list: type_specifier specifier_qualifier_list
   99                         | type_specifier
  100                         | type_qualifier specifier_qualifier_list
  101                         | type_qualifier

  102 type_qualifier: CONST
  103               | VOLATILE

  104 declarator: direct_declarator

  105 direct_declarator: IDENTIFIER
  106                  | '(' declarator ')'
  107                  | direct_declarator '[' ']'
  108                  | direct_declarator '[' STATIC type_qualifier_list assignment_exp ']'
  109                  | direct_declarator '[' STATIC assignment_exp ']'
  110                  | direct_declarator '[' type_qualifier_list STATIC assignment_exp ']'
  111                  | direct_declarator '[' type_qualifier_list assignment_exp ']'
  112                  | direct_declarator '[' type_qualifier_list ']'
  113                  | direct_declarator '[' assignment_exp ']'
  114                  | direct_declarator '(' parameter_type_list ')'
  115                  | direct_declarator '(' ')'
  116                  | direct_declarator '(' identifier_list ')'

  117 type_qualifier_list: type_qualifier
  118                    | type_qualifier_list type_qualifier

  119 parameter_type_list: parameter_list

  120 parameter_list: parameter_declaration
  121               | parameter_list ',' parameter_declaration

  122 parameter_declaration: declaration_specifiers declarator
  123                      | declaration_specifiers abstract_declarator
  124                      | declaration_specifiers

  125 identifier_list: IDENTIFIER
  126                | identifier_list ',' IDENTIFIER

  127 type_name: specifier_qualifier_list abstract_declarator
  128          | specifier_qualifier_list

  129 abstract_declarator: direct_abstract_declarator

  130 direct_abstract_declarator: '(' abstract_declarator ')'
  131                           | '[' ']'
  132                           | '[' STATIC type_qualifier_list assignment_exp ']'
  133                           | '[' STATIC assignment_exp ']'
  134                           | '[' type_qualifier_list STATIC assignment_exp ']'
  135                           | '[' type_qualifier_list assignment_exp ']'
  136                           | '[' type_qualifier_list ']'
  137                           | '[' assignment_exp ']'
  138                           | direct_abstract_declarator '[' ']'
  139                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_exp ']'
  140                           | direct_abstract_declarator '[' STATIC assignment_exp ']'
  141                           | direct_abstract_declarator '[' type_qualifier_list assignment_exp ']'
  142                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_exp ']'
  143                           | direct_abstract_declarator '[' type_qualifier_list ']'
  144                           | direct_abstract_declarator '[' assignment_exp ']'
  145                           | '(' ')'
  146                           | '(' parameter_type_list ')'
  147                           | direct_abstract_declarator '(' ')'
  148                           | direct_abstract_declarator '(' parameter_type_list ')'

  149 initializer: '{' initializer_list '}'
  150            | '{' initializer_list ',' '}'
  151            | assignment_exp

  152 initializer_list: designation initializer
  153                 | initializer
  154                 | initializer_list ',' designation initializer
  155                 | initializer_list ',' initializer

  156 designation: designator_list '='

  157 designator_list: designator
  158                | designator_list designator

  159 designator: '[' constant_expression ']'
  160           | '.' IDENTIFIER

  161 stmt: label_stmt
  162     | compound_stmt
  163     | exp_stmt
  164     | selection_stmt
  165     | iteration_stmt
  166     | jmp_stmt

  167 label_stmt: IDENTIFIER ':' stmt
  168           | CASE constant_expression ':' stmt
  169           | DEFAULT ':' stmt

  170 compound_stmt: '{' '}'
  171              | '{' block_item_list '}'

  172 block_item_list: block_item
  173                | block_item_list block_item

  174 block_item: declaration
  175           | stmt

  176 exp_stmt: ';'
  177         | exp ';'

  178 selection_stmt: IF '(' exp ')' stmt
  179               | IF '(' exp ')' stmt ELSE stmt
  180               | SWITCH '(' exp ')' stmt

  181 iteration_stmt: WHILE '(' exp ')' stmt
  182               | DO stmt WHILE '(' exp ')' ';'
  183               | FOR '(' exp_stmt exp_stmt ')' stmt
  184               | FOR '(' exp_stmt exp_stmt exp ')' stmt
  185               | FOR '(' declaration exp_stmt ')' stmt
  186               | FOR '(' declaration exp_stmt exp ')' stmt

  187 jmp_stmt: CONTINUE ';'
  188         | BREAK ';'
  189         | RETURN ';'
  190         | RETURN exp ';'

  191 translation_unit: external_declaration
  192                 | translation_unit external_declaration

  193 external_declaration: func_def
  194                     | declaration

  195 func_def: declaration_specifiers declarator declaration_list compound_stmt
  196         | declaration_specifiers declarator compound_stmt

  197 declaration_list: declaration
  198                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 30
    '%' (37) 36
    '&' (38) 25 52
    '(' (40) 4 12 13 17 18 32 106 114 115 116 130 145 146 147 148 178 179 180 181 182 183 184 185 186
    ')' (41) 4 12 13 17 18 32 106 114 115 116 130 145 146 147 148 178 179 180 181 182 183 184 185 186
    '*' (42) 26 34
    '+' (43) 27 38
    ',' (44) 18 20 75 86 121 126 150 154 155
    '-' (45) 28 39
    '.' (46) 14 160
    '/' (47) 35
    ':' (58) 62 167 168 169
    ';' (59) 77 78 176 177 182 187 188 189 190
    '<' (60) 44
    '=' (61) 65 87 156
    '>' (62) 45
    '?' (63) 62
    '[' (91) 11 107 108 109 110 111 112 113 131 132 133 134 135 136 137 138 139 140 141 142 143 144 159
    ']' (93) 11 107 108 109 110 111 112 113 131 132 133 134 135 136 137 138 139 140 141 142 143 144 159
    '^' (94) 54
    '{' (123) 17 18 149 150 170 171
    '|' (124) 56
    '}' (125) 17 18 149 150 170 171
    '~' (126) 29
    error (256)
    IDENTIFIER (258) 1 14 105 125 126 160 167
    I_CONSTANT (259) 5
    F_CONSTANT (260) 6
    STRING_LITERAL (261) 8
    FUNC_NAME (262) 9
    C_CONSTANT (263) 7
    EXTERN (264) 89
    STATIC (265) 90 108 109 110 132 133 134 139 140 142
    CONST (266) 102
    VOLATILE (267) 103
    BOOL (268) 97
    SHORT (269) 93
    INT (270) 94
    LONG (271) 95
    FLOAT (272) 96
    VOID (273) 91
    CHAR (274) 92
    CASE (275) 168
    DEFAULT (276) 169
    IF (277) 178 179
    ELSE (278) 179
    SWITCH (279) 180
    WHILE (280) 181 182
    DO (281) 182
    FOR (282) 183 184 185 186
    CONTINUE (283) 187
    BREAK (284) 188
    RETURN (285) 189 190
    INC_OP (286) 15 22
    DEC_OP (287) 16 23
    LEFT_OP (288) 41
    RIGHT_OP (289) 42
    LE_OP (290) 46
    GE_OP (291) 47
    EQ_OP (292) 49
    NE_OP (293) 50
    AND_OP (294) 58
    OR_OP (295) 60
    MUL_ASSIGN (296) 66
    DIV_ASSIGN (297) 67
    MOD_ASSIGN (298) 68
    ADD_ASSIGN (299) 69
    SUB_ASSIGN (300) 70
    AND_ASSIGN (301) 71
    XOR_ASSIGN (302) 72
    OR_ASSIGN (303) 73


Nonterminals, with rules where they appear

    $accept (73)
        on left: 0
    primary_expression (74)
        on left: 1 2 3 4
        on right: 10
    constant (75)
        on left: 5 6 7
        on right: 2
    string (76)
        on left: 8 9
        on right: 3
    postfix_expression (77)
        on left: 10 11 12 13 14 15 16 17 18
        on right: 11 12 13 14 15 16 21
    argument_expression_list (78)
        on left: 19 20
        on right: 13 20
    unary_expression (79)
        on left: 21 22 23 24
        on right: 22 23 31 64
    unary_operator (80)
        on left: 25 26 27 28 29 30
        on right: 24
    cast_expression (81)
        on left: 31 32
        on right: 24 32 33 34 35 36
    mulexp (82)
        on left: 33 34 35 36
        on right: 34 35 36 37 38 39
    addexp (83)
        on left: 37 38 39
        on right: 38 39 40 41 42
    shift_expression (84)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    rel_exp (85)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equals_ex (86)
        on left: 48 49 50
        on right: 49 50 51 52
    and_exp (87)
        on left: 51 52
        on right: 52 53 54
    xor_exp (88)
        on left: 53 54
        on right: 54 55 56
    or_exp (89)
        on left: 55 56
        on right: 56 57 58
    and_operant (90)
        on left: 57 58
        on right: 58 59 60
    or_operant (91)
        on left: 59 60
        on right: 60 61 62
    condition_exp (92)
        on left: 61 62
        on right: 62 63 76
    assignment_exp (93)
        on left: 63 64
        on right: 19 20 64 74 75 108 109 110 111 113 132 133 134 135 137 139 140 141 142 144 151
    assignment_operator (94)
        on left: 65 66 67 68 69 70 71 72 73
        on right: 64
    exp (95)
        on left: 74 75
        on right: 4 11 62 75 177 178 179 180 181 182 184 186 190
    constant_expression (96)
        on left: 76
        on right: 159 168
    declaration (97)
        on left: 77 78
        on right: 174 185 186 194 197 198
    declaration_specifiers (98)
        on left: 79 80 81 82 83 84
        on right: 77 78 79 81 83 122 123 124 195 196
    init_declarator_list (99)
        on left: 85 86
        on right: 78 86
    init_declarator (100)
        on left: 87 88
        on right: 85 86
    storage_class_specifier (101)
        on left: 89 90
        on right: 79 80
    type_specifier (102)
        on left: 91 92 93 94 95 96 97
        on right: 81 82 98 99
    specifier_qualifier_list (103)
        on left: 98 99 100 101
        on right: 98 100 127 128
    type_qualifier (104)
        on left: 102 103
        on right: 83 84 100 101 117 118
    declarator (105)
        on left: 104
        on right: 87 88 106 122 195 196
    direct_declarator (106)
        on left: 105 106 107 108 109 110 111 112 113 114 115 116
        on right: 104 107 108 109 110 111 112 113 114 115 116
    type_qualifier_list (107)
        on left: 117 118
        on right: 108 110 111 112 118 132 134 135 136 139 141 142 143
    parameter_type_list (108)
        on left: 119
        on right: 114 146 148
    parameter_list (109)
        on left: 120 121
        on right: 119 121
    parameter_declaration (110)
        on left: 122 123 124
        on right: 120 121
    identifier_list (111)
        on left: 125 126
        on right: 116 126
    type_name (112)
        on left: 127 128
        on right: 17 18 32
    abstract_declarator (113)
        on left: 129
        on right: 123 127 130
    direct_abstract_declarator (114)
        on left: 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148
        on right: 129 138 139 140 141 142 143 144 147 148
    initializer (115)
        on left: 149 150 151
        on right: 87 152 153 154 155
    initializer_list (116)
        on left: 152 153 154 155
        on right: 17 18 149 150 154 155
    designation (117)
        on left: 156
        on right: 152 154
    designator_list (118)
        on left: 157 158
        on right: 156 158
    designator (119)
        on left: 159 160
        on right: 157 158
    stmt (120)
        on left: 161 162 163 164 165 166
        on right: 167 168 169 175 178 179 180 181 182 183 184 185 186
    label_stmt (121)
        on left: 167 168 169
        on right: 161
    compound_stmt (122)
        on left: 170 171
        on right: 162 195 196
    block_item_list (123)
        on left: 172 173
        on right: 171 173
    block_item (124)
        on left: 174 175
        on right: 172 173
    exp_stmt (125)
        on left: 176 177
        on right: 163 183 184 185 186
    selection_stmt (126)
        on left: 178 179 180
        on right: 164
    iteration_stmt (127)
        on left: 181 182 183 184 185 186
        on right: 165
    jmp_stmt (128)
        on left: 187 188 189 190
        on right: 166
    translation_unit (129)
        on left: 191 192
        on right: 0 192
    external_declaration (130)
        on left: 193 194
        on right: 191 192
    func_def (131)
        on left: 195 196
        on right: 193
    declaration_list (132)
        on left: 197 198
        on right: 195 198


State 0

    0 $accept: • translation_unit $end

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 4
    BOOL      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    FLOAT     shift, and go to state 9
    VOID      shift, and go to state 10
    CHAR      shift, and go to state 11

    declaration              go to state 12
    declaration_specifiers   go to state 13
    storage_class_specifier  go to state 14
    type_specifier           go to state 15
    type_qualifier           go to state 16
    translation_unit         go to state 17
    external_declaration     go to state 18
    func_def                 go to state 19


State 1

   89 storage_class_specifier: EXTERN •

    $default  reduce using rule 89 (storage_class_specifier)


State 2

   90 storage_class_specifier: STATIC •

    $default  reduce using rule 90 (storage_class_specifier)


State 3

  102 type_qualifier: CONST •

    $default  reduce using rule 102 (type_qualifier)


State 4

  103 type_qualifier: VOLATILE •

    $default  reduce using rule 103 (type_qualifier)


State 5

   97 type_specifier: BOOL •

    $default  reduce using rule 97 (type_specifier)


State 6

   93 type_specifier: SHORT •

    $default  reduce using rule 93 (type_specifier)


State 7

   94 type_specifier: INT •

    $default  reduce using rule 94 (type_specifier)


State 8

   95 type_specifier: LONG •

    $default  reduce using rule 95 (type_specifier)


State 9

   96 type_specifier: FLOAT •

    $default  reduce using rule 96 (type_specifier)


State 10

   91 type_specifier: VOID •

    $default  reduce using rule 91 (type_specifier)


State 11

   92 type_specifier: CHAR •

    $default  reduce using rule 92 (type_specifier)


State 12

  194 external_declaration: declaration •

    $default  reduce using rule 194 (external_declaration)


State 13

   77 declaration: declaration_specifiers • ';'
   78            | declaration_specifiers • init_declarator_list ';'
  195 func_def: declaration_specifiers • declarator declaration_list compound_stmt
  196         | declaration_specifiers • declarator compound_stmt

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 21
    ';'         shift, and go to state 22

    init_declarator_list  go to state 23
    init_declarator       go to state 24
    declarator            go to state 25
    direct_declarator     go to state 26


State 14

   79 declaration_specifiers: storage_class_specifier • declaration_specifiers
   80                       | storage_class_specifier •

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 4
    BOOL      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    FLOAT     shift, and go to state 9
    VOID      shift, and go to state 10
    CHAR      shift, and go to state 11

    $default  reduce using rule 80 (declaration_specifiers)

    declaration_specifiers   go to state 27
    storage_class_specifier  go to state 14
    type_specifier           go to state 15
    type_qualifier           go to state 16


State 15

   81 declaration_specifiers: type_specifier • declaration_specifiers
   82                       | type_specifier •

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 4
    BOOL      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    FLOAT     shift, and go to state 9
    VOID      shift, and go to state 10
    CHAR      shift, and go to state 11

    $default  reduce using rule 82 (declaration_specifiers)

    declaration_specifiers   go to state 28
    storage_class_specifier  go to state 14
    type_specifier           go to state 15
    type_qualifier           go to state 16


State 16

   83 declaration_specifiers: type_qualifier • declaration_specifiers
   84                       | type_qualifier •

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 4
    BOOL      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    FLOAT     shift, and go to state 9
    VOID      shift, and go to state 10
    CHAR      shift, and go to state 11

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 29
    storage_class_specifier  go to state 14
    type_specifier           go to state 15
    type_qualifier           go to state 16


State 17

    0 $accept: translation_unit • $end
  192 translation_unit: translation_unit • external_declaration

    $end      shift, and go to state 30
    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 4
    BOOL      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    FLOAT     shift, and go to state 9
    VOID      shift, and go to state 10
    CHAR      shift, and go to state 11

    declaration              go to state 12
    declaration_specifiers   go to state 13
    storage_class_specifier  go to state 14
    type_specifier           go to state 15
    type_qualifier           go to state 16
    external_declaration     go to state 31
    func_def                 go to state 19


State 18

  191 translation_unit: external_declaration •

    $default  reduce using rule 191 (translation_unit)


State 19

  193 external_declaration: func_def •

    $default  reduce using rule 193 (external_declaration)


State 20

  105 direct_declarator: IDENTIFIER •

    $default  reduce using rule 105 (direct_declarator)


State 21

  106 direct_declarator: '(' • declarator ')'

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 21

    declarator         go to state 32
    direct_declarator  go to state 26


State 22

   77 declaration: declaration_specifiers ';' •

    $default  reduce using rule 77 (declaration)


State 23

   78 declaration: declaration_specifiers init_declarator_list • ';'
   86 init_declarator_list: init_declarator_list • ',' init_declarator

    ','  shift, and go to state 33
    ';'  shift, and go to state 34


State 24

   85 init_declarator_list: init_declarator •

    $default  reduce using rule 85 (init_declarator_list)


State 25

   87 init_declarator: declarator • '=' initializer
   88                | declarator •
  195 func_def: declaration_specifiers declarator • declaration_list compound_stmt
  196         | declaration_specifiers declarator • compound_stmt

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 4
    BOOL      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    FLOAT     shift, and go to state 9
    VOID      shift, and go to state 10
    CHAR      shift, and go to state 11
    '{'       shift, and go to state 35
    '='       shift, and go to state 36

    $default  reduce using rule 88 (init_declarator)

    declaration              go to state 37
    declaration_specifiers   go to state 38
    storage_class_specifier  go to state 14
    type_specifier           go to state 15
    type_qualifier           go to state 16
    compound_stmt            go to state 39
    declaration_list         go to state 40


State 26

  104 declarator: direct_declarator •
  107 direct_declarator: direct_declarator • '[' ']'
  108                  | direct_declarator • '[' STATIC type_qualifier_list assignment_exp ']'
  109                  | direct_declarator • '[' STATIC assignment_exp ']'
  110                  | direct_declarator • '[' type_qualifier_list STATIC assignment_exp ']'
  111                  | direct_declarator • '[' type_qualifier_list assignment_exp ']'
  112                  | direct_declarator • '[' type_qualifier_list ']'
  113                  | direct_declarator • '[' assignment_exp ']'
  114                  | direct_declarator • '(' parameter_type_list ')'
  115                  | direct_declarator • '(' ')'
  116                  | direct_declarator • '(' identifier_list ')'

    '('  shift, and go to state 41
    '['  shift, and go to state 42

    $default  reduce using rule 104 (declarator)


State 27

   79 declaration_specifiers: storage_class_specifier declaration_specifiers •

    $default  reduce using rule 79 (declaration_specifiers)


State 28

   81 declaration_specifiers: type_specifier declaration_specifiers •

    $default  reduce using rule 81 (declaration_specifiers)


State 29

   83 declaration_specifiers: type_qualifier declaration_specifiers •

    $default  reduce using rule 83 (declaration_specifiers)


State 30

    0 $accept: translation_unit $end •

    $default  accept


State 31

  192 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 192 (translation_unit)


State 32

  106 direct_declarator: '(' declarator • ')'

    ')'  shift, and go to state 43


State 33

   86 init_declarator_list: init_declarator_list ',' • init_declarator

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 21

    init_declarator    go to state 44
    declarator         go to state 45
    direct_declarator  go to state 26


State 34

   78 declaration: declaration_specifiers init_declarator_list ';' •

    $default  reduce using rule 78 (declaration)


State 35

  170 compound_stmt: '{' • '}'
  171              | '{' • block_item_list '}'

    IDENTIFIER      shift, and go to state 46
    I_CONSTANT      shift, and go to state 47
    F_CONSTANT      shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    FUNC_NAME       shift, and go to state 50
    C_CONSTANT      shift, and go to state 51
    EXTERN          shift, and go to state 1
    STATIC          shift, and go to state 2
    CONST           shift, and go to state 3
    VOLATILE        shift, and go to state 4
    BOOL            shift, and go to state 5
    SHORT           shift, and go to state 6
    INT             shift, and go to state 7
    LONG            shift, and go to state 8
    FLOAT           shift, and go to state 9
    VOID            shift, and go to state 10
    CHAR            shift, and go to state 11
    CASE            shift, and go to state 52
    DEFAULT         shift, and go to state 53
    IF              shift, and go to state 54
    SWITCH          shift, and go to state 55
    WHILE           shift, and go to state 56
    DO              shift, and go to state 57
    FOR             shift, and go to state 58
    CONTINUE        shift, and go to state 59
    BREAK           shift, and go to state 60
    RETURN          shift, and go to state 61
    INC_OP          shift, and go to state 62
    DEC_OP          shift, and go to state 63
    '('             shift, and go to state 64
    '{'             shift, and go to state 35
    '}'             shift, and go to state 65
    '&'             shift, and go to state 66
    '*'             shift, and go to state 67
    '+'             shift, and go to state 68
    '-'             shift, and go to state 69
    '~'             shift, and go to state 70
    '!'             shift, and go to state 71
    ';'             shift, and go to state 72

    primary_expression       go to state 73
    constant                 go to state 74
    string                   go to state 75
    postfix_expression       go to state 76
    unary_expression         go to state 77
    unary_operator           go to state 78
    cast_expression          go to state 79
    mulexp                   go to state 80
    addexp                   go to state 81
    shift_expression         go to state 82
    rel_exp                  go to state 83
    equals_ex                go to state 84
    and_exp                  go to state 85
    xor_exp                  go to state 86
    or_exp                   go to state 87
    and_operant              go to state 88
    or_operant               go to state 89
    condition_exp            go to state 90
    assignment_exp           go to state 91
    exp                      go to state 92
    declaration              go to state 93
    declaration_specifiers   go to state 38
    storage_class_specifier  go to state 14
    type_specifier           go to state 15
    type_qualifier           go to state 16
    stmt                     go to state 94
    label_stmt               go to state 95
    compound_stmt            go to state 96
    block_item_list          go to state 97
    block_item               go to state 98
    exp_stmt                 go to state 99
    selection_stmt           go to state 100
    iteration_stmt           go to state 101
    jmp_stmt                 go to state 102


State 36

   87 init_declarator: declarator '=' • initializer

    IDENTIFIER      shift, and go to state 103
    I_CONSTANT      shift, and go to state 47
    F_CONSTANT      shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    FUNC_NAME       shift, and go to state 50
    C_CONSTANT      shift, and go to state 51
    INC_OP          shift, and go to state 62
    DEC_OP          shift, and go to state 63
    '('             shift, and go to state 64
    '{'             shift, and go to state 104
    '&'             shift, and go to state 66
    '*'             shift, and go to state 67
    '+'             shift, and go to state 68
    '-'             shift, and go to state 69
    '~'             shift, and go to state 70
    '!'             shift, and go to state 71

    primary_expression  go to state 73
    constant            go to state 74
    string              go to state 75
    postfix_expression  go to state 76
    unary_expression    go to state 77
    unary_operator      go to state 78
    cast_expression     go to state 79
    mulexp              go to state 80
    addexp              go to state 81
    shift_expression    go to state 82
    rel_exp             go to state 83
    equals_ex           go to state 84
    and_exp             go to state 85
    xor_exp             go to state 86
    or_exp              go to state 87
    and_operant         go to state 88
    or_operant          go to state 89
    condition_exp       go to state 90
    assignment_exp      go to state 105
    initializer         go to state 106


State 37

  197 declaration_list: declaration •

    $default  reduce using rule 197 (declaration_list)


State 38

   77 declaration: declaration_specifiers • ';'
   78            | declaration_specifiers • init_declarator_list ';'

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 21
    ';'         shift, and go to state 22

    init_declarator_list  go to state 23
    init_declarator       go to state 24
    declarator            go to state 45
    direct_declarator     go to state 26


State 39

  196 func_def: declaration_specifiers declarator compound_stmt •

    $default  reduce using rule 196 (func_def)


State 40

  195 func_def: declaration_specifiers declarator declaration_list • compound_stmt
  198 declaration_list: declaration_list • declaration

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 4
    BOOL      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    FLOAT     shift, and go to state 9
    VOID      shift, and go to state 10
    CHAR      shift, and go to state 11
    '{'       shift, and go to state 35

    declaration              go to state 107
    declaration_specifiers   go to state 38
    storage_class_specifier  go to state 14
    type_specifier           go to state 15
    type_qualifier           go to state 16
    compound_stmt            go to state 108


State 41

  114 direct_declarator: direct_declarator '(' • parameter_type_list ')'
  115                  | direct_declarator '(' • ')'
  116                  | direct_declarator '(' • identifier_list ')'

    IDENTIFIER  shift, and go to state 109
    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    CONST       shift, and go to state 3
    VOLATILE    shift, and go to state 4
    BOOL        shift, and go to state 5
    SHORT       shift, and go to state 6
    INT         shift, and go to state 7
    LONG        shift, and go to state 8
    FLOAT       shift, and go to state 9
    VOID        shift, and go to state 10
    CHAR        shift, and go to state 11
    ')'         shift, and go to state 110

    declaration_specifiers   go to state 111
    storage_class_specifier  go to state 14
    type_specifier           go to state 15
    type_qualifier           go to state 16
    parameter_type_list      go to state 112
    parameter_list           go to state 113
    parameter_declaration    go to state 114
    identifier_list          go to state 115


State 42

  107 direct_declarator: direct_declarator '[' • ']'
  108                  | direct_declarator '[' • STATIC type_qualifier_list assignment_exp ']'
  109                  | direct_declarator '[' • STATIC assignment_exp ']'
  110                  | direct_declarator '[' • type_qualifier_list STATIC assignment_exp ']'
  111                  | direct_declarator '[' • type_qualifier_list assignment_exp ']'
  112                  | direct_declarator '[' • type_qualifier_list ']'
  113                  | direct_declarator '[' • assignment_exp ']'

    IDENTIFIER      shift, and go to state 103
    I_CONSTANT      shift, and go to state 47
    F_CONSTANT      shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    FUNC_NAME       shift, and go to state 50
    C_CONSTANT      shift, and go to state 51
    STATIC          shift, and go to state 116
    CONST           shift, and go to state 3
    VOLATILE        shift, and go to state 4
    INC_OP          shift, and go to state 62
    DEC_OP          shift, and go to state 63
    '('             shift, and go to state 64
    ']'             shift, and go to state 117
    '&'             shift, and go to state 66
    '*'             shift, and go to state 67
    '+'             shift, and go to state 68
    '-'             shift, and go to state 69
    '~'             shift, and go to state 70
    '!'             shift, and go to state 71

    primary_expression   go to state 73
    constant             go to state 74
    string               go to state 75
    postfix_expression   go to state 76
    unary_expression     go to state 77
    unary_operator       go to state 78
    cast_expression      go to state 79
    mulexp               go to state 80
    addexp               go to state 81
    shift_expression     go to state 82
    rel_exp              go to state 83
    equals_ex            go to state 84
    and_exp              go to state 85
    xor_exp              go to state 86
    or_exp               go to state 87
    and_operant          go to state 88
    or_operant           go to state 89
    condition_exp        go to state 90
    assignment_exp       go to state 118
    type_qualifier       go to state 119
    type_qualifier_list  go to state 120


State 43

  106 direct_declarator: '(' declarator ')' •

    $default  reduce using rule 106 (direct_declarator)


State 44

   86 init_declarator_list: init_declarator_list ',' init_declarator •

    $default  reduce using rule 86 (init_declarator_list)


State 45

   87 init_declarator: declarator • '=' initializer
   88                | declarator •

    '='  shift, and go to state 36

    $default  reduce using rule 88 (init_declarator)


State 46

    1 primary_expression: IDENTIFIER •
  167 label_stmt: IDENTIFIER • ':' stmt

    ':'  shift, and go to state 121

    $default  reduce using rule 1 (primary_expression)


State 47

    5 constant: I_CONSTANT •

    $default  reduce using rule 5 (constant)


State 48

    6 constant: F_CONSTANT •

    $default  reduce using rule 6 (constant)


State 49

    8 string: STRING_LITERAL •

    $default  reduce using rule 8 (string)


State 50

    9 string: FUNC_NAME •

    $default  reduce using rule 9 (string)


State 51

    7 constant: C_CONSTANT •

    $default  reduce using rule 7 (constant)


State 52

  168 label_stmt: CASE • constant_expression ':' stmt

    IDENTIFIER      shift, and go to state 103
    I_CONSTANT      shift, and go to state 47
    F_CONSTANT      shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    FUNC_NAME       shift, and go to state 50
    C_CONSTANT      shift, and go to state 51
    INC_OP          shift, and go to state 62
    DEC_OP          shift, and go to state 63
    '('             shift, and go to state 64
    '&'             shift, and go to state 66
    '*'             shift, and go to state 67
    '+'             shift, and go to state 68
    '-'             shift, and go to state 69
    '~'             shift, and go to state 70
    '!'             shift, and go to state 71
